...
            className="text-foreground flex-1 text-3xl font-bold"
            numberOfLines={1}
          >
            {selectedGroupName}
          </Text>
          <Button
            testID="shopping-lists-group-settings"
            title="Group Settings"
            variant="outline"
            size="md"
            icon="settings"
            onPress={() =>
              router.navigate("/(tabs)/settings/group-settings", {
...
            }
          />
        </View>

        {/* Create New List Button */}
        <Button
          testID="shopping-list-create-button"
          title="Create Shopping List"
          variant="primary"
          size="lg"
          icon="plus"
          onPress={() =>
            router.push(
...
