...
              subtitle="Edit your group details"
              iconName="settings"
            />
          </Link>
          <Link href="/(tabs)/settings/group-settings/members" asChild>
            <SettingsItem
              testID="group-settings-members"
              title="Members"
              subtitle="Manage your group members"
              iconName="users"
            />
          </Link>
          <Link href="/(tabs)/home/shopping-lists" asChild>
...
